--- a/frontend/army_mentoring/src/components/Routes/Community/EditArticle.scss
+++ b/frontend/army_mentoring/src/components/Routes/Community/EditArticle.scss
@@ -29,7 +29,7 @@
             @include button
         }
         .confirm{
-            background-color: $primary;
+            background-color: $secondary;
         }
         .cancel{
             background-color: $gray2;
