--- a/frontend/army_mentoring/src/components/Routes/Community/community.scss
+++ b/frontend/army_mentoring/src/components/Routes/Community/community.scss
@@ -1,19 +1,25 @@
+@import '../preset.scss';
 
 @mixin button{
+    font-family: 'Do Hyeon', sans-serif;
+    font-size: 1.7rem;
     display:flex;
     justify-content: center;
     align-items: center;
-    width:100px;
-    height:50px;
-    line-height: 50px;
-    border:3px solid $black;
+    width: auto;
+    height: auto;
+    padding: 0.5rem 1.5rem;
     border-radius: 15px 15px 15px 0px;
-    margin:10px;
-    color:$white;
-    font-weight: bold;
+    margin: 1rem;
+    color: $white;
     cursor : pointer;
     text-decoration: none;
+    &:hover{
+        background: $gray3;
+        color: white;
+    }   
 }
+
 @mixin communityPost{
     margin: 30px;
     padding: 30px;
@@ -23,7 +29,7 @@
     width: 800px;
     margin:30px auto;
     background-color: $white;
-    border: 1px solid $gray3;
+    border: 2px solid $gray3;
     color: $black;
     border-radius: 20px 20px 20px 0px;
     text-decoration: none;
@@ -35,14 +41,17 @@
     justify-content: flex-start;
     font-weight: bold;
     padding:5px;
+    font-size: 1.5rem;
+    text-align: left;
     color: $black;
 }
 @mixin communityContent{
-    padding:30px 5px;
+    padding:20px 10px;
     display:flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
+    text-align: left;
 }
 @mixin communityStatistics{
     display: flex;
