--- a/frontend/army_mentoring/src/components/Routes/MyMentoring/MymentoringList.scss
+++ b/frontend/army_mentoring/src/components/Routes/MyMentoring/MymentoringList.scss
@@ -1,15 +1,59 @@
-$gray3 :#D4D4D4;
+@import "../preset.scss";
 
-.section{
-    display:flex;
-    flex-direction: column;
-    height:600px;
-    width:100%;
-    background-color: white;
-    align-items:center;
-    justify-content: center;
-}
+.MymentoringList{
+    & > .section{
+        display:flex;
+        flex-direction: column;
+        width:100%;
+        background-color: white;
+        align-items:flex-start;
+        justify-content: center;
 
-.section:nth-child(2n-1){
-    background-color: $gray3;
+        & > *{
+            margin: 0 100px;
+        }
+
+        & > h2 {
+            font-weight: bold;
+            font-size: 20px;
+            margin-bottom: 40px;
+        }
+
+        & + .section {
+            margin-top: 60px;
+        }
+
+        .mentoring_cards{
+            display: flex;
+            width: 100%;
+            margin: 0 50px;
+            
+            & > a {
+                & > .MyMentoringCard{
+                    margin: 0 30px;
+                }
+            }
+        }
+    }
+
+    & > .recent-container {
+        & > .recent {
+            margin: 0;
+            width: 100%;
+            height: 75%;
+            background-color: $primary;
+            padding: 40px 60px;
+            display: flex;
+            flex-direction: column;
+            
+            & > h2 {
+                font-weight: bold;
+                font-size: 25px;
+            }
+        }
+    }
+    
+    & > .section:nth-child(2n-1){
+        background-color: $gray3;
+    }
 }
