--- a/frontend/army_mentoring/src/components/Routes/Community/EditArticle.scss
+++ b/frontend/army_mentoring/src/components/Routes/Community/EditArticle.scss
@@ -34,5 +34,15 @@
         .cancel{
             background-color: $gray2;
         }
+        /*
+        .confirm{
+            color: $secondary;
+            border-color: $secondary;
+        }
+        .cancel{
+            color: $gray2;
+            border-color: $gray2;
+        }
+        */
     }
 }
