--- a/frontend/army_mentoring/src/components/Routes/Profile/Chat/ChatMessage.scss
+++ b/frontend/army_mentoring/src/components/Routes/Profile/Chat/ChatMessage.scss
@@ -5,15 +5,21 @@
     align-items: center;
 
     & > .profile-image {
-        width:100px;
-        height:100px;
-        border:1px solid $black;
+        width:70px;
+        height:70px;
+        //border:1px solid $black;
+        border-radius: 20px;
         margin:10px;
     }
 
     & > .description {
         margin:15px;
-        padding:10px;
+        padding:10px 15px;
+        border:0px solid $black;
+        font-family: 'Noto Sans KR', sans-serif;
+        font-weight: 300;
+        font-size: 1.2rem;
+        
         .text{
             word-break: break-all;
         }
