--- a/frontend/army_mentoring/src/components/Routes/Home.scss
+++ b/frontend/army_mentoring/src/components/Routes/Home.scss
@@ -181,13 +181,17 @@ $main-green: #6ba259;
 			height: 220px;
 			width: 200px;
 			margin: 15px;
-			background-color: $primary;
+			border: 5px solid $secondary;
 			border-radius: 30px 30px 30px 0px;
 			h3{
 				font-family: 'Do Hyeon', sans-serif;
-				margin-top: 25px;
-				margin-bottom: 20px;
+				margin-top: 15px;
+				margin-bottom: 15px;
+				margin-left: 10px;
+				margin-right: 10px;
 				font-size: 1.8rem;
+				padding-bottom: 5px;
+				border-bottom: 4px solid $secondary;
 			}
 			img {
 				margin-top: 20px;
@@ -199,17 +203,20 @@ $main-green: #6ba259;
 }
 
 .review {
-	margin-bottom: 100px;
+	margin-bottom: 200px;
 	.carousel-inner {
 		height: 800px;
 		width: 800px;
 	}
 	.carousel-item > img {
 		height: 500px;
-		width: 450px;
+		width: 600px;
 		//img 크기 500/450으로 고정
 	}
 	.carousel-caption {
+		font-family: 'Noto Sans KR', sans-serif;
+		font-weight: 300;
+		font-size: 1.3rem;
 		color: black;
 		position: relative;
 		left: 0;
@@ -222,11 +229,21 @@ $main-green: #6ba259;
 		margin-bottom: 50px;
 	}
 	h3{
+		display:inline-block;
+		text-align: center;
+		margin: 0 auto;
 		font-family: 'Noto Sans KR', sans-serif;
 		font-weight: 700;
-		font-size: 1.2rem;
-		margin-top: 5px;
-		margin-bottom: 10px;
+		font-size: 1.5rem;
+		margin-top: 15px;
+		margin-bottom: 25px;
+		padding-left: 10px;
+		padding-right: 10px;
+		padding-bottom: 3px;
+		background: linear-gradient(to top, $primary 55%, transparent 50%);
+	}
+	p {
+		text-align: left;
 	}
 }
 .faqs {
