[update]: 로그인 css 가독성 수정
로그인 css 가독성 수정
gh-58

--- a/frontend/army_mentoring/src/components/Routes/Login/LoginDetail.scss
+++ b/frontend/army_mentoring/src/components/Routes/Login/LoginDetail.scss
@@ -11,6 +11,8 @@
     font-family: 'Do Hyeon', sans-serif;
 
     .title{
+        display:flex;
+        width: auto;
         font-size: 3.5rem;
         padding-bottom: 1rem;
     }
