--- a/frontend/army_mentoring/src/components/Routes/Login/Signup.scss
+++ b/frontend/army_mentoring/src/components/Routes/Login/Signup.scss
@@ -11,6 +11,8 @@
     font-family: 'Do Hyeon', sans-serif;
 
     .title{
+        display:flex;
+        width: auto;
         font-size: 50px;
     }
     
