--- a/frontend/army_mentoring/src/components/Routes/MyMentoring/MentoringSpecificMentee.scss
+++ b/frontend/army_mentoring/src/components/Routes/MyMentoring/MentoringSpecificMentee.scss
@@ -16,11 +16,39 @@
             height:300px;
             border:1px solid $black;
         }
+        a {
+            text-decoration: none;
+            color:$black;
+        }
         .tags{
             display:flex;
             height:100%;
+            width:10%;
             flex-direction: column;
             justify-content: flex-end;
+            .tag-box {
+                display:flex;
+                flex-direction: row;
+                justify-content: flex-end;
+                padding:0px;
+                margin:10px;
+                .tag{
+                    display: flex;
+                    padding: 5px;
+                    background-color: $gray2;
+                    border-radius : 5px;
+                    font-weight: bold;
+                }
+            }
+        }
+
+        h2 {
+            font-weight: bold;
+            color:$white;
+            font-size:50px;
+        }
+        .during{
+            font-size:30px;
         }
     }
     .content-container{
