[update] : #61 assignment 추가 기능

--- a/frontend/army_mentoring/src/components/Routes/MyMentoring/MentoringSpecificMento.scss
+++ b/frontend/army_mentoring/src/components/Routes/MyMentoring/MentoringSpecificMento.scss
@@ -60,7 +60,22 @@
         .progress-content{
         }
         .assignments{
-
+            .edit-assignment-container{
+                border:1px solid $black;
+            }
+            .h{
+                display:none;
+            }
+            .assignment-buttons{
+                display:flex;
+                flex-direction: row;
+                justify-content : space-around;
+                
+            }
+            .assignment{
+                border:1px solid $black;
+                margin-bottom: 10px;
+            }
         }
     }
 }
