--- a/frontend/army_mentoring/src/components/Routes/MyMentoring/MentoringSpecificMentee.scss
+++ b/frontend/army_mentoring/src/components/Routes/MyMentoring/MentoringSpecificMentee.scss
@@ -1,6 +1,6 @@
 @import '../preset.scss';
 
-.specific-mentee-body{
+.specific-mentor-body{
     .title-container{
         display:flex;
         flex-direction: row;
@@ -60,7 +60,22 @@
         .progress-content{
         }
         .assignments{
-
+            .edit-assignment-container{
+                border:1px solid $black;
+            }
+            .h{
+                display:none;
+            }
+            .assignment-buttons{
+                display:flex;
+                flex-direction: row;
+                justify-content : space-around;
+                
+            }
+            .assignment{
+                border:1px solid $black;
+                margin-bottom: 10px;
+            }
         }
     }
 }
