--- a/frontend/army_mentoring/src/components/Routes/Mentoring/MakeMentoring.scss
+++ b/frontend/army_mentoring/src/components/Routes/Mentoring/MakeMentoring.scss
@@ -1,13 +1,46 @@
-.makementoring_profile {
-	display: flex;
-	justify-content: center;
-	img {
-		width: 100px;
-		height: 100px;
-	}
-	.makementoring_about {
-		width: 100px;
-		height: 100px;
-		background-color: green;
+@import "../preset.scss";
+
+.MakeMentoring {
+	& > .make_mentoring_container {
+
+		& > .make_mentoring_header {
+			display: flex;
+			justify-content: center;
+			
+			& > .user_profile {
+				& > img {
+					width: 100px;
+					height: 100px;
+				}
+			}
+
+			& > .tags {
+				& > .tags_container{
+					display: flex;
+					
+					& > .tag {
+						padding: 5px 10px;
+						height: 30px;
+						display: flex;
+						align-items: center;
+						justify-content: center;
+						border-radius: 5px;
+						margin-right: 10px;
+						background-color: $primary;
+						color: $white;
+					}
+				}
+			}
+		}
+	
+		& > .make_mentoring_body {
+			& > .input_assignments{
+				& > .make_mentoring_assignments_container{
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+				}
+			}
+		}
 	}
 }
