[update] : #61 과제 수정 기능에 날짜 수정도 추가

--- a/frontend/army_mentoring/src/components/Routes/MyMentoring/MentoringSpecific.scss
+++ b/frontend/army_mentoring/src/components/Routes/MyMentoring/MentoringSpecific.scss
@@ -67,6 +67,9 @@
             .add-assignment-container{
                 border:1px solid $black;
             }
+            .edit-assignment{
+                border:1px solid $black;
+            }
             .h{
                 display:none;
             }
