--- a/frontend/army_mentoring/src/components/Routes/Profile/Portfolio/PortfolioList.scss
+++ b/frontend/army_mentoring/src/components/Routes/Profile/Portfolio/PortfolioList.scss
@@ -1,70 +1,104 @@
 @import '../../preset.scss';
+@import '../../Community/community.scss';
 
-.portfolio-body{
+.port_title_2{
     display:flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items:center;
-    width:800px;
-    background-color: $secondary;
+    width:900px;
+    font-family: 'Do Hyeon', sans-serif;
+    font-size: 2rem;
+    padding-left: 100px;
+    margin-top: 20px;
+}
+
+.portfolio-body{
+
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items:center;
+    width:900px;
+    background-color: white;
+    border: 2px solid $gray3;
+    border-radius: 2rem;
     margin:0px auto;
+    margin-bottom: 50px;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 500;
+
     .portfolio{
         display:flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: flex-start;
         align-items: center;
-        width:600px;
-        height:300px;
-        background-color: $primary;
+        width:800px;
+        height:200px;
+        border: 4px solid $primary;
+        border-radius: 300px 0px 0px 300px;
         margin:20px;
+        margin-bottom: 0px;
+
         .thumbnail {
             display:flex;
-            width:150px;
-            height:150px;
-            border:1px solid $black;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width:250px;
+            height:250px;
+            border-radius: 300px;
+            border:1px solid black;
+            margin-left: 30px;
         }
         .text-column{
             display:flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             width:400px;
-            height:200px;
+            height:150px;
+            margin-left: 0px;
+
             .title{
-                font-weight: bold;
+                width: auto;
+                height: 61px;
+                text-align: left;
+                background: linear-gradient(to top, $primary 30%, transparent 30%);
+			    padding-right: 7px;
+			    padding-left: 7px;
                 font-size:50px;
             }
-            .description{
-            }
+
             .link{
-                display: block;
+                width: 750px;
+                padding-top: 20px;
+                text-align: right;
                 color:$gray2;
+                font-size: 1.2rem;
+                font-weight: 700;
                 text-decoration: none;
             }
         }
     }
-    .buttons{
+
+    .button_body{
         display:flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: center;
+        align-items: center;
+        margin: 20px 0px;
+        margin-left: 500px;
 
-        .button{
-            display:block;
-            width:200px;
-            height:50px;
-            margin:10px;
-            line-height: 50px;
-            border: 1px solid $black;
-            border-radius: 15px 15px 15px 0px;
-            text-decoration: none;
-            color:$white;
-            cursor : pointer;
-        }
-        .confirm{
-            background-color: $primary;
-        }
-        .cancel{
+        .button_cancel{
+            @include button;
+            padding: 10px 50px;
+            margin: 10px 10px;
             background-color: $gray2;
         }
-
+        .button_confirm{
+            @include button;
+            padding: 10px 50px;
+            margin: 10px 10px;
+        }
     }
 }
