--- a/frontend/army_mentoring/src/components/Routes/Profile/ProfileDetail.scss
+++ b/frontend/army_mentoring/src/components/Routes/Profile/ProfileDetail.scss
@@ -5,93 +5,153 @@
   flex-direction: column;
   width:1500px;
   height:1500px;
-  justify-content: space-between;
+  justify-content: flex-start;
   margin: 0 auto;
   align-items: center;
-  
+  font-family: 'Noto Sans KR', sans-serif;
+
+  .pro_title{
+    padding-top: 60px;
+    font-family: 'Do Hyeon', sans-serif;
+    font-size: 3rem;
+    display:flex;
+    text-align: left;
+    flex-direction: column;
+    align-items: flex-start;
+    width:1300px;
+    height:auto;
+    margin-top: 0;
+  }
+
   .intro{
     display:flex;
     flex-direction: row;
-    height:500px;
-    width: 1500px;
+    height:300px;
+    width: 1300px;
     margin: 0 auto;
     background-color: $secondary;
+    //border: 5px solid $secondary;
     align-items: center;
     justify-content: space-around;
     border-radius: 0px 200px 200px 200px;
 
     .my-img{
-      border: 1px solid;
-      border-radius: 15px;
-      width: 300px;
-      height: 300px;
+      margin-left: 35px;
+      border: 7px solid white;
+      border-radius: 200px;
+      width: 250px;
+      height: 250px;
     }
 
     .desc-col{
+      margin-right: 30px;
       display:flex;
       flex-direction: column;
       justify-content: space-around;
+      align-items: flex-start;
       text-align: left;
       height:300px;
-      h1 {
+      width: 650px;
+      padding-bottom: 40px;
+      h1{
+        width: auto;
+        margin-top: 20px;
+        font-family: 'Do Hyeon', sans-serif;
         color: $white;
-        font-weight: bold;
-        font-size: 50px;
+        font-size: 5rem;
       }
-      span{
-        font-weight: bold;
+      h3{
+        width: auto;
+        margin-left: 30px;
+        font-family: 'Noto Sans KR', sans-serif;
+        font-size: 1.3rem;
+/*         background-color: white;
+        padding: 5px;
+        border-radius: 10px; */
+      }
+      .level{
         font-size: 25px;
+        margin-left: 30px;
       }
     }
 
     .button-col{
-
+      
       display:flex;
       flex-direction: column;
       height:250px;
       justify-content: flex-end;
-
+      padding-right: 100px;
+      padding-bottom: 25px;
+      margin-top: 10px;
       .go-portfolio{
-        font-size:30px;
-        color: white;
-        background-color: $gray2;
-        border-radius:10px 10px 10px 0;
-        padding: 0px;
-        margin: 0px;
-        width: 350px;
-        height: 100px;
-        line-height: 100px;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        font-family: 'Noto Sans KR', sans-serif;
+        font-weight: 700;
+        font-size:1.3rem;
+        border-radius:50px;
+        width: 200px;
+        height: 75px;
         text-decoration: none;
-        color: $white;
+        background-color: white;
+        border: 3px solid $tertiary;
+        color: $tertiary;
+
+        &:hover{
+          color: white;
+          background-color: $gray2;
+          border: 0px solid $gray2;
+          transition: 500ms;
+        }
       }
     }
   }
 
   .buttons{
     display:flex;
-    width:100%;
-    height:70px;
+    width: 460px;
+    height: 100px;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    border: 4px solid $secondary;
+    margin: 30px auto;
+    border-radius: 200px 0px 200px 200px;
+    margin-left: 940px;
+    padding-left: 15px;
+    padding-right: 15px;
+
     .button{
+      font-family: 'Noto Sans KR', sans-serif;
+      font-weight: 700;
+      font-size:1.3rem;
       background-color: $secondary;
       text-decoration: none;
       font-size:20px;
       color: white;
       display:block;
-      width: 300px;
+      width: 200px;
       height: 70px;
-      line-height: 70px;
-      padding:0px;
-      margin:0px;
-      border-radius: 10px 10px 10px 0px;
-      font-weight:bold;
+      line-height: 60px;
+      border: 3px solid $secondary;
+      border-radius: 50px;
+
+      &:hover{
+        background-color: white;
+        border: 3px solid $tertiary;
+        color: $tertiary;
+        transition: 500ms;
+      }
     }
 
   }
 
   .mentorings{
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 700;
+    font-size:1.3rem;
     display: flex;
     flex-direction: column;
     height:400px;
@@ -106,5 +166,11 @@
       font-size: 34px;
       font-weight: bold;
     }
+  }
+
+  .progress_bar{
+    display: flex;
+    width: 600px;
+    
   }
 }
