[update]: html 파일 삭제 및 기타 css 수정
html 파일 삭제 및 기타 css 수정
gh-58

--- a/frontend/army_mentoring/src/components/Routes/Chat/Chat.scss
+++ b/frontend/army_mentoring/src/components/Routes/Chat/Chat.scss
@@ -56,9 +56,13 @@
             line-height: 100px;
             padding:8px 12px;
             color:$white;
+            border: 3px solid $secondary;
             &:hover{
-                background-color: $gray3;
-            }
+                background-color: white;
+                border: 3px solid $tertiary;
+                color: $tertiary;
+                transition: 500ms;
+              }
         }
     }
 }
