--- a/frontend/army_mentoring/src/components/Routes/Home.scss
+++ b/frontend/army_mentoring/src/components/Routes/Home.scss
@@ -203,7 +203,8 @@ $main-green: #6ba259;
 }
 
 .review {
-	margin-bottom: 200px;
+	margin-bottom: 250px;
+	margin-top: 50px;
 	.carousel-inner {
 		height: 800px;
 		width: 800px;
