--- a/frontend/army_mentoring/src/components/Routes/Community/Article.scss
+++ b/frontend/army_mentoring/src/components/Routes/Community/Article.scss
@@ -69,24 +69,36 @@
 				.update{
 					display:flex;
 					flex-direction: row;
-					justify-content: flex-start;	
+					justify-content: flex-start;
+					border: 1px solid $gray3;
+					border-radius: 5px;
 					.delete{
 						margin: 5px;
 						&:hover{
 							color: $gray3;
-						}   
+							transition: 500ms;
+						}
+						border-right: 1px solid $gray3;
+						padding-right: 10px;
+						padding-left: 7px;
 					}
 					.edit{
 						margin: 5px;
 						&:hover{
 							color: $gray3;
-						}   
+						}
+						padding-right: 7px;
 					}
 
 				}
 				.like{
 					@include communityLikes;
+					border: 0;
 					width:80px;
+					&:hover{
+						filter: grayscale(40%);
+						transition: 500ms;
+					}
 				}
 				.date{
 					font-size:10px;
@@ -169,6 +181,7 @@
 			&:hover{
 				background: $gray3;
 				color: white;
+				transition: 500ms;
 			}   
 		}
 
