--- a/frontend/army_mentoring/src/components/Routes/Profile/Portfolio/PortfolioList.scss
+++ b/frontend/army_mentoring/src/components/Routes/Profile/Portfolio/PortfolioList.scss
@@ -34,7 +34,7 @@
         justify-content: flex-start;
         align-items: center;
         width:800px;
-        height:200px;
+        height:180px;
         border: 4px solid $primary;
         border-radius: 300px 0px 0px 300px;
         margin:20px;
@@ -58,10 +58,12 @@
             width:400px;
             height:150px;
             margin-left: 0px;
+            margin-top: 10px;
 
             .title{
+                margin-left: 40px;
                 width: auto;
-                height: 61px;
+                height: 60px;
                 text-align: left;
                 background: linear-gradient(to top, $primary 30%, transparent 30%);
 			    padding-right: 7px;
@@ -70,13 +72,17 @@
             }
 
             .link{
-                width: 750px;
-                padding-top: 20px;
+                width: 770px;
+                padding: 20px 0px;
                 text-align: right;
                 color:$gray2;
                 font-size: 1.2rem;
                 font-weight: 700;
                 text-decoration: none;
+                &:hover{
+                    color: $secondary;
+                    transition: 200ms;
+                }
             }
         }
     }
