--- a/frontend/army_mentoring/src/components/Routes/Mentoring/MentoringList.scss
+++ b/frontend/army_mentoring/src/components/Routes/Mentoring/MentoringList.scss
@@ -1,65 +1,102 @@
 @import '../preset.scss';
 
-.mentoring-list-container{
-    display:flex;
-    flex-direction: column;
-    width:90%;
-    margin:0px auto;
-    & .mentoring-list-header{
-        display:flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: center;
-        & .mentoring-list-title{
-            font-weight:bold;
-            font-size:50px;
-        }
-        & .mentoring-list-search-bar{
-            display:flex;
-            flex-direction: row;
-            align-items: center;
-            margin:0px 30px;
-            & input{
-                width:300px;
-            }
-        }
-    }
-    & .mentoring-list-box{
-        width:100%;
-        display:flex;
-        flex-direction: row;
-        flex-wrap:wrap;
-        justify-content: flex-start;
-        align-content: flex-start;
-        padding:30px;
-        & a{
-            display:flex;
-            flex-direction: column;
-            & p{
-                font-size:15px;
-            }
-            width:500px;
-            height:300px;
-            margin:20px;
-            border:3px solid green;
-            box-shadow: 10px 5px 5px $gray3;
-            text-decoration: none;
-            color:black;
-            border-radius: 20px 20px 20px 0px;
-        }
-    }
+.mentoring-list-container {
+	display: flex;
+	flex-direction: column;
+	width: 90%;
+	margin: 0px auto;
+	& .mentoring-list-header {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-start;
+		align-items: center;
+		& .mentoring-list-title {
+			font-weight: bold;
+			font-size: 50px;
+		}
+		& .mentoring-list-search-bar {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			margin: 0px 30px;
+			& input {
+				width: 300px;
+			}
+		}
+	}
+	& .mentoring-list-box {
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: flex-start;
+		align-content: flex-start;
+		padding: 30px;
+		& a {
+			display: flex;
+			flex-direction: column;
+			& p {
+				font-size: 15px;
+			}
+			width: 350px;
+			height: 200px;
+			margin: 20px;
+			border: 3px solid green;
+			background-color: $primary;
+			box-shadow: 10px 5px 5px $gray3;
+			text-decoration: none;
+			color: black;
+			border-radius: 20px 20px 20px 0px;
+			h4 {
+				margin-top: 10px;
+			}
+		}
+	}
 }
 
-#button{
-    display:inline-block;
-    width:300px;
-    height:100px;
-    border:3px solid green;
-    background-color:white;
-    box-shadow: 10px 5px 5px $gray3;
-    text-decoration: none;
-    color:black;
-    line-height: 100px;
-    border-radius: 20px 20px 20px 0px;
-    margin:10px 0px;
+button {
+	background: #6ba259;
+	color: #fff;
+	border: none;
+	position: relative;
+	height: 30px;
+	width: auto;
+	font-size: 1em;
+	padding: 0 2em;
+	cursor: pointer;
+	transition: 800ms ease all;
+	outline: none;
+	margin-left: 5px;
+	border-radius: 5px;
+}
+button:hover {
+	background: #fff;
+	color: #6ba259;
+}
+button:before,
+button:after {
+	content: '';
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 2px;
+	width: 0;
+	background: #6ba259;
+	transition: 400ms ease all;
+}
+button:after {
+	right: inherit;
+	top: inherit;
+	left: 0;
+	bottom: 0;
+}
+button:hover:before,
+button:hover:after {
+	width: 100%;
+	transition: 800ms ease all;
+}
+
+button {
+	margin-left: 20px;
+	margin-bottom: 20px;
 }
