--- a/frontend/army_mentoring/src/components/Routes/Mentoring/MentoringIntroduction.scss
+++ b/frontend/army_mentoring/src/components/Routes/Mentoring/MentoringIntroduction.scss
@@ -1,31 +1,54 @@
 @import "../preset.scss";
-.mentoring_section {
+.mentoring-introduction-body {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	justify-content: center;
+	padding: 10px;
+	width: 100%;
 
-	.mentoring_introduction {
-		margin: 20px;
+	.header{
+		display:flex;
+		flex-direction: row;
 		justify-content: center;
-		border: 1px solid $gray3;
-		padding: 5px 10px;
-		border-radius: 15px 15px 15px 0px;
-		width: 800px;
-		.section {
-			height: 300px;
+		background-color: $primary;
+		padding:15px;
+		border-radius: 0px 30px 30px 30px;
+		.header-mentor{
+			display:flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			.mentor-thumbnail{
+				display:flex;
+				width:300px;
+				height:300px;
+				border:1px solid $black;
+			}
+			.mentor-name{
+				text-decoration: none;
+				color:$black;
+			}
 		}
-		#mentoring_portfolio {
-			background-color: white;
+		.header-title{
+			display:flex;
+			flex-direction: column;
+			justify-content: center;
+			font-weight: bold;
+			font-size: 50px;
+			color:$white;
+			width:80%;
 		}
-		#mentorintro {
-			background-color: $primary;
-		}
-		#assignmentintro {
-		}
-		#plan {
-			background-color: $primary;
-		}
-		#review {
+		.header-tags{
+			display:flex;
+			flex-direction: column;
+			justify-content: flex-end;
+			.tag{
+				background-color: $gray2;
+				padding:5px;
+				border-radius: 5px;
+			}
 		}
 	}
+
+
 }
