--- a/frontend/army_mentoring/src/components/Routes/MyMentoring/MentoringSpecific.scss
+++ b/frontend/army_mentoring/src/components/Routes/MyMentoring/MentoringSpecific.scss
@@ -11,45 +11,52 @@
         height:500px;
         background-color: $primary;
         border-radius: 0px 30px 30px 30px;
-        img {
-            display:block;
-            width:300px;
-            height:300px;
-            border:1px solid $black;
+        padding:10px;
+        .mentor-content{
+            img {
+                display:block;
+                width:300px;
+                height:300px;
+                border:1px solid $black;
+            }
+            a {
+                text-decoration: none;
+                color:$black;
+            }
         }
-        a {
-            text-decoration: none;
-            color:$black;
-        }
-        .tags{
+        .other-content{
             display:flex;
-            height:100%;
-            width:10%;
             flex-direction: column;
-            justify-content: flex-end;
-            .tag-box {
+            width:80%;
+            height:100%;
+            .title-content{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                height:90%;
+                h2 {
+                    font-weight: bold;
+                    color:$white;
+                    font-size:50px;
+                }
+                .during{
+                    font-size:30px;
+                }
+
+            }
+
+            .tags{
                 display:flex;
                 flex-direction: row;
                 justify-content: flex-end;
-                padding:0px;
-                margin:10px;
                 .tag{
-                    display: flex;
                     padding: 5px;
                     background-color: $gray2;
                     border-radius : 5px;
                     font-weight: bold;
+                    margin-left : 10px;
                 }
             }
-        }
-
-        h2 {
-            font-weight: bold;
-            color:$white;
-            font-size:50px;
-        }
-        .during{
-            font-size:30px;
         }
     }
     .content-container{
