[update] : 참여중인 멘티 수 표시

--- a/frontend/army_mentoring/src/components/Routes/Mentoring/MentoringIntroduction.scss
+++ b/frontend/army_mentoring/src/components/Routes/Mentoring/MentoringIntroduction.scss
@@ -56,7 +56,9 @@
 					width:100%;
 					font-size: 30px;
 					color:$black;
-
+				}
+				.number-of-mentee{
+					
 				}
 			}
 			.header-tags{
