--- a/frontend/army_mentoring/src/components/Routes/MyMentoring/MentoringSpecific.scss
+++ b/frontend/army_mentoring/src/components/Routes/MyMentoring/MentoringSpecific.scss
@@ -182,6 +182,9 @@
                     justify-content: flex-end;
                 }
             }
+            .h{
+                display:none;
+            }
         }
     }
 }
